// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Order /> should call handleCancel when order is cancelled 1`] = `
<tr
  key="11"
>
  <td>
    11
  </td>
  <td>
    Amala and Ewedu
  </td>
  <td>
    Chinonso Okorie
  </td>
  <td>
    4000
  </td>
  <td>
    1
  </td>
  <td>
    4000
  </td>
  <td
    className="text-success"
  >
    delivered
  </td>
  <td>
    <div
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <button
        className="action-btn"
        disabled={true}
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#ccc",
            "cursor": "default",
          }
        }
        title="Deliver order"
        value="Deliver"
      >
        Deliver
      </button>
      <button
        className="action-btn"
        disabled={true}
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#ccc",
            "cursor": "default",
          }
        }
        title="Cancel order"
        value="Cancel"
      >
        Cancel
      </button>
    </div>
  </td>
</tr>
`;

exports[`<Order /> should call handleCancel when order is cancelled 2`] = `
<tr
  key="11"
>
  <td>
    11
  </td>
  <td>
    Amala and Ewedu
  </td>
  <td>
    Chinonso Okorie
  </td>
  <td>
    4000
  </td>
  <td>
    1
  </td>
  <td>
    4000
  </td>
  <td
    className="text-success"
  >
    delivered
  </td>
  <td>
    <div
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <button
        className="action-btn"
        disabled={true}
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#ccc",
            "cursor": "default",
          }
        }
        title="Deliver order"
        value="Deliver"
      >
        Deliver
      </button>
      <button
        className="action-btn"
        disabled={true}
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#ccc",
            "cursor": "default",
          }
        }
        title="Cancel order"
        value="Cancel"
      >
        Cancel
      </button>
    </div>
  </td>
</tr>
`;

exports[`<Order /> should call handleCancel when order is cancelled 3`] = `
<tr
  key="11"
>
  <td>
    11
  </td>
  <td>
    Amala and Ewedu
  </td>
  <td>
    Chinonso Okorie
  </td>
  <td>
    4000
  </td>
  <td>
    1
  </td>
  <td>
    4000
  </td>
  <td
    className="text-success"
  >
    delivered
  </td>
  <td>
    <div
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <button
        className="action-btn"
        disabled={true}
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#ccc",
            "cursor": "default",
          }
        }
        title="Deliver order"
        value="Deliver"
      >
        Deliver
      </button>
      <button
        className="action-btn"
        disabled={true}
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#ccc",
            "cursor": "default",
          }
        }
        title="Cancel order"
        value="Cancel"
      >
        Cancel
      </button>
    </div>
  </td>
</tr>
`;

exports[`<Order /> should call handleDeliver when order is delivered 1`] = `
<tr
  key="11"
>
  <td>
    11
  </td>
  <td>
    Amala and Ewedu
  </td>
  <td>
    Chinonso Okorie
  </td>
  <td>
    4000
  </td>
  <td>
    1
  </td>
  <td>
    4000
  </td>
  <td
    className="text-success"
  >
    delivered
  </td>
  <td>
    <div
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <button
        className="action-btn"
        disabled={true}
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#ccc",
            "cursor": "default",
          }
        }
        title="Deliver order"
        value="Deliver"
      >
        Deliver
      </button>
      <button
        className="action-btn"
        disabled={true}
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#ccc",
            "cursor": "default",
          }
        }
        title="Cancel order"
        value="Cancel"
      >
        Cancel
      </button>
    </div>
  </td>
</tr>
`;

exports[`<Order /> should call handleDeliver when order is delivered 2`] = `
<tr
  key="11"
>
  <td>
    11
  </td>
  <td>
    Amala and Ewedu
  </td>
  <td>
    Chinonso Okorie
  </td>
  <td>
    4000
  </td>
  <td>
    1
  </td>
  <td>
    4000
  </td>
  <td
    className="text-success"
  >
    delivered
  </td>
  <td>
    <div
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <button
        className="action-btn"
        disabled={true}
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#ccc",
            "cursor": "default",
          }
        }
        title="Deliver order"
        value="Deliver"
      >
        Deliver
      </button>
      <button
        className="action-btn"
        disabled={true}
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#ccc",
            "cursor": "default",
          }
        }
        title="Cancel order"
        value="Cancel"
      >
        Cancel
      </button>
    </div>
  </td>
</tr>
`;

exports[`<Order /> should call handleDeliver when order is delivered 3`] = `
<tr
  key="11"
>
  <td>
    11
  </td>
  <td>
    Amala and Ewedu
  </td>
  <td>
    Chinonso Okorie
  </td>
  <td>
    4000
  </td>
  <td>
    1
  </td>
  <td>
    4000
  </td>
  <td
    className="text-success"
  >
    delivered
  </td>
  <td>
    <div
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <button
        className="action-btn"
        disabled={true}
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#ccc",
            "cursor": "default",
          }
        }
        title="Deliver order"
        value="Deliver"
      >
        Deliver
      </button>
      <button
        className="action-btn"
        disabled={true}
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#ccc",
            "cursor": "default",
          }
        }
        title="Cancel order"
        value="Cancel"
      >
        Cancel
      </button>
    </div>
  </td>
</tr>
`;

exports[`<Order /> should match snapshot 1`] = `
<tr
  key="11"
>
  <td>
    11
  </td>
  <td>
    Amala and Ewedu
  </td>
  <td>
    Chinonso Okorie
  </td>
  <td>
    4000
  </td>
  <td>
    1
  </td>
  <td>
    4000
  </td>
  <td
    className="text-success"
  >
    delivered
  </td>
  <td>
    <div
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <button
        className="action-btn"
        disabled={true}
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#ccc",
            "cursor": "default",
          }
        }
        title="Deliver order"
        value="Deliver"
      >
        Deliver
      </button>
      <button
        className="action-btn"
        disabled={true}
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#ccc",
            "cursor": "default",
          }
        }
        title="Cancel order"
        value="Cancel"
      >
        Cancel
      </button>
    </div>
  </td>
</tr>
`;

exports[`<Order /> should match snapshot 2`] = `
<tr
  key="11"
>
  <td>
    11
  </td>
  <td>
    Amala and Ewedu
  </td>
  <td>
    Chinonso Okorie
  </td>
  <td>
    4000
  </td>
  <td>
    1
  </td>
  <td>
    4000
  </td>
  <td
    className="text-danger"
  >
    cancelled
  </td>
  <td>
    <div
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <button
        className="action-btn"
        disabled={true}
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#ccc",
            "cursor": "default",
          }
        }
        title="Deliver order"
        value="Deliver"
      >
        Deliver
      </button>
      <button
        className="action-btn"
        disabled={true}
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#ccc",
            "cursor": "default",
          }
        }
        title="Cancel order"
        value="Cancel"
      >
        Cancel
      </button>
    </div>
  </td>
</tr>
`;

exports[`<Order /> should match snapshot 3`] = `
<tr
  key="11"
>
  <td>
    11
  </td>
  <td>
    Amala and Ewedu
  </td>
  <td>
    Chinonso Okorie
  </td>
  <td>
    4000
  </td>
  <td>
    1
  </td>
  <td>
    4000
  </td>
  <td
    className="text-warning"
  >
    pending
  </td>
  <td>
    <div
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <button
        className="action-btn"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#28a745",
          }
        }
        title="Deliver order"
        value="Deliver"
      >
        Deliver
      </button>
      <button
        className="action-btn"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#dc3545",
          }
        }
        title="Cancel order"
        value="Cancel"
      >
        Cancel
      </button>
    </div>
  </td>
</tr>
`;

exports[`<Order /> should match snapshot 4`] = `
<tr
  key="11"
>
  <td>
    11
  </td>
  <td>
    -
  </td>
  <td>
    -
  </td>
  <td>
    -
  </td>
  <td>
    1
  </td>
  <td>
    4000
  </td>
  <td
    className="text-success"
  >
    delivered
  </td>
  <td>
    <div
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <button
        className="action-btn"
        disabled={true}
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#ccc",
            "cursor": "default",
          }
        }
        title="Deliver order"
        value="Deliver"
      >
        Deliver
      </button>
      <button
        className="action-btn"
        disabled={true}
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#ccc",
            "cursor": "default",
          }
        }
        title="Cancel order"
        value="Cancel"
      >
        Cancel
      </button>
    </div>
  </td>
</tr>
`;
